--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,18 +11,26 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@prisma/client": "6.11.1",
     "@repo/ui": "workspace:*",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^6.0.0",
     "next": "^15.3.0",
+    "next-auth": "^4.24.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@repo/db": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.30.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "3",
     "typescript": "5.8.2"
   }
 }
