--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@repo/db": "workspace:*",
+    "@repo/store": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.15.3",
