--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,13 +15,15 @@
     "ts-node": "^10.9.2"
   },
   "prisma": {
-  "seed": "ts-node prisma/seed.ts"
-},
+    "seed": "ts-node prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "6.11.1",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^6.0.0",
     "prisma": "^6.11.1"
   }
 }
